<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height">

            <ImageView
                android:id="@+id/imgRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_categories_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/bcg_recipes_list" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/favorites_icon_size"
                android:layout_height="@dimen/favorites_icon_size"
                android:layout_marginTop="@dimen/margin_main"
                android:layout_marginEnd="@dimen/margin_main"
                android:background="@drawable/ic_heart"
                android:contentDescription="@string/cd_add_to_fav_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <TextView
                    android:id="@+id/tvRecipeHeader"
                    style="@style/StyleHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_gravity="start|bottom"
                    tools:text="Острый гамбургер" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvIngredients"
                style="@style/StyleTitle20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_main"
                android:layout_marginTop="@dimen/margin_main"
                android:textColor="@color/ma_ingredient_title_color"
                android:text="@string/recipe_ingredients_text" />

            <TextView
                android:id="@+id/tvPortions"
                style="@style/StyleRecipePortions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_portions_text"
                android:layout_marginTop="@dimen/margin_ingredients_section"
                android:layout_marginStart="@dimen/margin_main"/>

            <SeekBar
                style="@style/styleSeekBar"
                android:id="@+id/sbSelectPortions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_ingredients_section"
                android:min="1"
                android:max="5"
                android:progress="1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_main"
            android:background="@drawable/rv_white_background"
            android:paddingHorizontal="@dimen/margin_recipe_rv"
            android:paddingVertical="@dimen/margin_quarter"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:itemCount="9"
            tools:listitem="@layout/item_ingredient" />

        <TextView
            style="@style/StyleTitle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main"
            android:text="@string/recipe_method_text"
            android:textColor="@color/ma_ingredient_title_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_main"
            android:background="@drawable/rv_white_background"
            android:paddingHorizontal="@dimen/margin_recipe_rv"
            android:paddingVertical="@dimen/margin_quarter"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:itemCount="5"
            tools:listitem="@layout/item_method" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>